# preset-nuxt3

./: .env-template  .gitignore  README.md  index.ts  nuxt.config.ts  package-lock.json  package.json  tsconfig.json
.github/workflows/: pack.yml  publish.yml
backend/: .env  .env-template  .gitignore  .python-version  Dockerfile  README.md  manage.py  pyproject.toml
backend/cms/apps/cms/: README.md  blocks.py  models.py  serializers.py  views.py
backend/cms/apps/cms/migrations/: 0003_homepage_main_text.py  0004_homepage_main_image.py  0005_homepage_content.py  0006_alter_homepage_content.py
backend/cms/apps/cms/templates/: base.html
backend/cms/apps/cms/templates/cms/: home_page.html
backend/cms/apps/cms/templates/cms/templates/: input_text.html
backend/cms/apps/cms/templatetags/: wagtailuserbar_admin.py
backend/cms/apps/people/: README.md
backend/cms/django/: settings.py  urls.py
components/blocks/: InputText.vue  Title1.vue
components/wagtail/: Page.vue
doc/source/: conf.py  environment.md  index.rst  installation.md
front/: nuxt.config.ts  package-lock.json  package.json  vite.config.js
pages/: [...wagtail].vue
