[tool.poetry]
name = "abitbol"
version = "0.1.0"
description = ""
authors = ["Laurent Tréguier <laurent.treguier@with-madrid.com>"]
license = "Proprietary"

packages = [
    {include = "abitbol"},
]

[tool.poetry.dependencies]
python = "~3.10"
modelw-preset-django = {extras = ["wagtail", "gunicorn"], version = "~2023.1.0b2"}
drf-spectacular = {extras = ["sidecar"], version = "^0.25.1"}
redis = "^4.4.2"
django-extensions = "^3.2.1"
django-cors-headers = "^3.13.0"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
ipython = "*"

[tool.isort]
profile = "black"
known_first_party = "abitbol"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
